--- a/src/css/producto.css
+++ b/src/css/producto.css
@@ -1,5 +1,4 @@
 .xd{
-    transition: 0.5s all ease-in-out;
     margin-bottom: 30px;
     margin-top: 30px;
     width: 400px;
@@ -8,12 +7,12 @@
 
 .photo{
     border-radius: 10px;
-    width: 400px;
+    width: 100%;
     height: 390px;
 }
 
+
 .xd:hover {
-    transform: scale(1.1);
     box-shadow: 2px 2px 2px gray;
 
 }
