Formulario de registro BD + errores

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -26,8 +26,13 @@
     color: black;
 }
 
+.error-msg{
+    max-width: 300px;
+}
+
 .link:hover{
     color: white;
+    text-decoration: none;
 }
 
 .logo{
