--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,13 +1,84 @@
-.img{
+.row{
+    margin: 0;
+}
+
+.left-side{
+    background-image: url("../images/wnba.png");
     width: 100%;
-}
-
-.back{
-    background-image: url('../images/kobe.png');
     background-size: cover;
-    height: 50vh;
+
 }
 
-.back h3{
+.left-side::before, .right-side::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0.7;
+}
+
+.right-side {
+    background-image: url("../images/lebron.png");
+   width: 100%;
+   background-size: cover;
+}
+
+.white{
     color: white;
 }
+
+.white:hover{
+    color: black;
+    text-decoration: none;
+}
+
+.split-pane {
+    padding-top: 1em;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 15em;
+    font-size: 2em;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-weight:300;
+    
+}
+
+
+
+.split-pane > div {
+    position: relative;
+    top: 20%;
+    text-align: center;
+  }
+
+  .split-pane > div .text-content .big {
+    font-size: 2em;
+  }
+
+
+
+.vertical {
+    border: none;
+    position: relative;
+    margin: 0 auto;
+    height: 100px;
+  }
+  
+  .vertical::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    border-left: 1px solid black;
+    height: 100%;
+  }
+
+  .nike{
+    width: 90px;
+    height: 40px;
+    margin-top: 10px;
+  }
